Spotless refactor (custom eclipse java format)