@@ -22,78 +22,82 @@ import choral.types.Member.HigherMethod;
 /**
  * A class to store everything needed to create a specific selection except the Enum.
  */
-public class MiniZincSelectionMethod{
+public class MiniZincSelectionMethod {
 
-    protected String channelIdentifier;
-    protected GroundInterface channel;
-    protected HigherMethod selectionMethod;
-    protected World sender;
+	protected String channelIdentifier;
+	protected GroundInterface channel;
+	protected HigherMethod selectionMethod;
+	protected World sender;
 
-    public MiniZincSelectionMethod( 
-        String channelIdentifier,
-        GroundInterface channel,
-        HigherMethod selectionMethod,
-        World sender 
-    ){
-        this.channelIdentifier = channelIdentifier;
-        this.channel = channel;
-        this.selectionMethod = selectionMethod;
-        this.sender = sender;
-    }
+	public MiniZincSelectionMethod(
+			String channelIdentifier,
+			GroundInterface channel,
+			HigherMethod selectionMethod,
+			World sender
+	) {
+		this.channelIdentifier = channelIdentifier;
+		this.channel = channel;
+		this.selectionMethod = selectionMethod;
+		this.sender = sender;
+	}
 
-    public String channelIdentifier(){
-        return channelIdentifier;
-    }
+	public String channelIdentifier() {
+		return channelIdentifier;
+	}
 
-    public GroundInterface channel(){
-        return channel;
-    }
+	public GroundInterface channel() {
+		return channel;
+	}
 
-    public HigherMethod selectionMethod(){
-        return selectionMethod;
-    }
+	public HigherMethod selectionMethod() {
+		return selectionMethod;
+	}
 
-    public World sender(){
-        return sender;
-    }
+	public World sender() {
+		return sender;
+	}
 
-    /**
-     * Creates a selections expression from this SelectionMethod object on the enumerator given as 
-     * input.
-     */
-    public ScopedExpression createSelectionExpression( Enum enumerator, EnumConstant enumCons, Position position ){
-        
-        TypeExpression typeExpression = new TypeExpression( 
-            enumerator.name(), 
-            Collections.emptyList(), // This needs to be "higher kinded" and can thus not have a worldargument
-            Collections.emptyList(),
-            position);
+	/**
+	 * Creates a selections expression from this SelectionMethod object on the enumerator given as 
+	 * input.
+	 */
+	public ScopedExpression createSelectionExpression(
+			Enum enumerator, EnumConstant enumCons, Position position
+	) {
 
-        TypeExpression argScope = new TypeExpression(
-            enumerator.name(), 
-            List.of( new WorldArgument( new Name(sender.identifier() )) ), // this needs a worldargument
-            Collections.emptyList(),
-            position);
+		TypeExpression typeExpression = new TypeExpression(
+				enumerator.name(),
+				Collections.emptyList(), // This needs to be "higher kinded" and can thus not have a worldargument
+				Collections.emptyList(),
+				position );
 
-        ScopedExpression argument = new ScopedExpression( // looks something like Enum@Sender.CHOICE
-            new StaticAccessExpression( // Enum@Sender
-                argScope,
-                position),
-            new FieldAccessExpression( // CHOICE
-                enumCons.name(),
-                position),
-            position);
-        
-        final List<Expression> arguments = List.of( argument );
-        final Name name = new Name( selectionMethod.identifier() );
-        final List<TypeExpression> typeArguments = List.of( typeExpression );
-        
-        MethodCallExpression scopedExpression = new MethodCallExpression(name, arguments, typeArguments, position);
-        
-        // The selection method is a method inside its channel, so we need to make the channel its scope
-        FieldAccessExpression scope = new FieldAccessExpression(new Name(channelIdentifier), position);
-        
-        // Something like channel.< enumerator >select( enumerator@sender.enumCons )
-        return new ScopedExpression(scope, scopedExpression, position);
-    }
+		TypeExpression argScope = new TypeExpression(
+				enumerator.name(),
+				List.of( new WorldArgument( new Name( sender.identifier() ) ) ), // this needs a worldargument
+				Collections.emptyList(),
+				position );
+
+		ScopedExpression argument = new ScopedExpression( // looks something like Enum@Sender.CHOICE
+				new StaticAccessExpression( // Enum@Sender
+						argScope,
+						position ),
+				new FieldAccessExpression( // CHOICE
+						enumCons.name(),
+						position ),
+				position );
+
+		final List< Expression > arguments = List.of( argument );
+		final Name name = new Name( selectionMethod.identifier() );
+		final List< TypeExpression > typeArguments = List.of( typeExpression );
+
+		MethodCallExpression scopedExpression =
+				new MethodCallExpression( name, arguments, typeArguments, position );
+
+		// The selection method is a method inside its channel, so we need to make the channel its scope
+		FieldAccessExpression scope =
+				new FieldAccessExpression( new Name( channelIdentifier ), position );
+
+		// Something like channel.< enumerator >select( enumerator@sender.enumCons )
+		return new ScopedExpression( scope, scopedExpression, position );
+	}
 }
